As an app developer I want to get a list of all details of a Doctor by id to show in my app [#186909212]
